crates/toml/tests/snapshots/invalid/table/newline-01.stderr
TOML parse error at line 1, column 5
  |
1 | [tbl
  |     ^
unclosed table, expected `]`

---
TOML parse error at line 2, column 1
  |
2 | ]
  | ^
missing table open, expected `[`
